--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ edition = "2021"
 
 [dependencies]
 bevy.workspace = true
+bevy_egui.workspace = true
 rb_core.workspace = true
 rb_noise.workspace = true
 rb_world.workspace = true
