--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ edition = "2021"
 [dependencies]
 bevy.workspace = true
 bevy_egui.workspace = true
+rayon = "1.10"
 rb_core.workspace = true
 rb_noise.workspace = true
 rb_world.workspace = true
