--- a/crates/rb_noise/Cargo.toml
+++ b/crates/rb_noise/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 rb_core.workspace = true
 noise.workspace = true
 bevy.workspace = true
+rayon = "1.10"
+smallvec = "1.13"
 
 [dev-dependencies]
 bevy.workspace = true
